[package]
name = "jsontp"
description = "The reference implementation of the JSONTP protocol in Rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.34", features = ["alloc", "now"] }
serde = { version = "1.0.197", features = ["serde_derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
